src/test/deca/syntax/valid/created/testInitVar/initNull.deca
// Description :
//    Test d'une classe sans attributs avec methodes 
//
// Résultats :
//    ok


class A{
    int x;
}

