src/test/deca/syntax/invalid/created/RecognitionErrors/wrongAssign.deca
// Description :
//    Test invalide : Initialisation d'une variable float avec un nombre trop petit
//
// Résultats :
//    Erreur syntaxique
//    Ligne 9: missing ';' at '10'

{
int x 10 = ;
}